[package]
name = "brave"
version = "0.1.0"
edition = "2021"
authors = ["Nueck <nueck@outlook.com>"]
repository = "https://github.com/Nueck/brave/"

#发布禁止
publish = false

[workspace]
members = [".", "brave-core", "brave-api", "brave-config", "brave-db", "brave-utils", "brave-admin", "brave-blog", "brave-home"]

[dependencies]
#主要的web服务
brave-core = { path = "brave-core" }








