[package]
name = "brave"
version = "0.1.0"
edition = "2021"
authors = ["Nueck <nueck@outlook.com>"]
repository = "https://github.com/Nueck/brave/"

[workspace]
members = [
    ".",
    "brave-core",
    "brave-data",
    "brave-config",
    "brave-db",
    "brave-db/migration",
    "brave-page",
]

[dependencies]
brave-core = { path = "brave-core" }

[workspace.dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
actix-rt = "2"
actix-cors = "0.6"
actix-web-lab = "0.19"
walkdir = "2"
minijinja = { version = "0.32", features = ["source"] }
minijinja-autoreload = "0.32"
log = "0.4"
dirs = "5"
zip = "0.6"
config = "0.13"
dotenvy = "0.15"
fast_log = { version = "1.5", features = ["gzip"] }
sanitize-filename = "0.4"
rand = "0.8"
ring = { version = "0.16", features = ["std"] }
futures = "0.3"
base64 = "0.21"
once_cell = "1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
blake3 = "1"
regex = "1"
lettre = "0.10"
publicsuffix = "2"
uuid = { version = "1", features = ["v4"] }
may = "0.3"
sea-orm = { version = "0.11", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros", "postgres-array"] }
derive_more = "0.99"
jsonwebtoken = "8"











