[package]
name = "brave-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brave-utils = { path = "../brave-utils" }
brave-db = { path = "../brave-db" }
brave-config = { path = "../brave-config" }
actix-web = "4"
actix-files = "0.6"
actix-rt = "2"
actix-cors = "0.6"
actix-web-lab = "0.19"
askama = "0.12"
sea-orm = { version = "0.11", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"] }
