[package]
name = "brave-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brave-utils = { path = "../brave-utils" }
brave-db = { path = "../brave-db" }
brave-config = { path = "../brave-config" }
actix-web = "4.2.1"
actix-files = "0.6.2"
actix-rt = "2.8.0"
actix-cors = "0.6.4"
actix-web-lab = "0.19.1"
askama = "0.12.0"
