[package]
name = "brave-config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
publicsuffix.workspace = true
dirs.workspace = true
actix-rt.workspace = true
futures.workspace = true
futures-util.workspace = true
log.workspace = true
may.workspace = true
fast_log.workspace = true
config.workspace = true
dotenvy.workspace = true
once_cell.workspace = true
sea-orm.workspace = true
serde.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
derive_more.workspace = true
blake3.workspace = true
regex.workspace = true
lettre.workspace = true
rand.workspace = true
ring.workspace = true
jsonwebtoken.workspace = true


