[package]
name = "brave-core"
version = "0.1.0"
edition = "2021"
authors = ["Nueck <nueck@outlook.com>"]
repository = "https://github.com/Nueck/brave/"


 

[dependencies]
brave-config = { path = "../brave-config" }
brave-db = { path = "../brave-db" }
brave-page = { path = "../brave-page" }
brave-data = { path = "../brave-data" }
actix-web.workspace = true
actix-files.workspace = true
actix-multipart.workspace = true
actix-rt.workspace = true
actix-cors.workspace = true
actix-web-lab.workspace = true
sanitize-filename.workspace = true
futures.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
log.workspace = true
fast_log.workspace = true
dotenvy.workspace = true
uuid.workspace = true
may.workspace = true
sea-orm.workspace = true
derive_more.workspace = true
jsonwebtoken.workspace = true






