[package]
name = "brave-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
[dependencies]
brave-db = { path = "../brave-db" }
brave-config = { path = "../brave-config" }
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
actix-rt = "2"
actix-cors = "0.6"
actix-web-lab = "0.19"
askama = "0.12"
dirs = "5"
futures = "0.3"
sanitize-filename = "0.4"
futures-util = "0.3"
log = "0.4"
may = "0.3"
sea-orm = { version = "0.11", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"] }
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"
derive_more = "0.99"
serde_json = "1"
jsonwebtoken = "8"

