[package]
name = "brave-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brave-utils = { path = "../brave-utils" }
brave-config = { path = "../brave-config" }
actix-web = "4"
actix-files = "0.6"
actix-rt = "2"
actix-cors = "0.6"
actix-web-lab = "0.19"
dirs = "5"
futures = "0.3"
futures-util = "0.3"
log = "0.4"
sea-orm = { version = "0.11", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"] }
config = "0.13"
dotenvy = "0.15"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
derive_more = "0.99"
serde_json = "1"
