[package]
name = "brave-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brave-utils = { path = "../brave-utils" }
brave-config = { path = "../brave-config" }
actix-web.workspace = true
actix-files.workspace = true
actix-rt.workspace = true
actix-cors.workspace = true
actix-web-lab.workspace = true
dirs.workspace = true
futures.workspace = true
futures-util.workspace = true
log.workspace = true
sea-orm.workspace = true
config.workspace = true
dotenvy.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_yaml.workspace = true
derive_more.workspace = true
serde_json.workspace = true
