[package]
name = "brave-home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brave-utils = { path = "../brave-utils" }
brave-db = { path = "../brave-db" }
brave-config = { path = "../brave-config" }
actix-web = "4.2.1"
askama = "0.12.0"
log = "0.4.17"
actix-files = "0.6.2"
sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros"] }
actix-cors = "0.6.4"

