[package]
name = "brave-home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brave-utils = { path = "../brave-utils" }
brave-db = { path = "../brave-db" }
brave-config = { path = "../brave-config" }
actix-web.workspace = true
askama.workspace = true
log.workspace = true
actix-files.workspace = true
sea-orm.workspace = true
actix-cors.workspace = true

