[package]
name = "cako-middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cako-utils = { path = "../brave-utils" }
actix-web = "4.2.1"
actix-files = "0.6.2"
actix-rt = "2.8.0"
actix-cors = "0.6.4"
futures = "0.3.26"
futures-util = "0.3.26"
serde_json = "1.0.93"
log = "0.4.17"
once_cell = "1.17.1"

