[package]
name = "brave-page"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brave-db = { path = "../brave-db" }
brave-config = { path = "../brave-config" }
actix-web.workspace = true
actix-web-lab.workspace = true
actix-files.workspace = true
actix-rt.workspace = true
actix-cors.workspace = true
once_cell.workspace = true
askama.workspace = true
minijinja.workspace = true
serde.workspace = true
serde_json.workspace = true
sea-orm.workspace = true
log.workspace = true

