[package]
name = "brave-utils"
version = "0.1.0"
edition = "2021"
authors = ["Nueck <nueck@outlook.com>"]
repository = "https://github.com/Nueck/brave/"

[dependencies]
jsonwebtoken = "8.2.0"
log = "0.4.17"
ring = { version = "0.16.20", features = ["std"] }
base64 = "0.21.0"
serde = { version = "1.0.137", features = ["derive"] }
once_cell = "1.17.1"
blake3 = "1.3.3"
