[package]
name = "brave-utils"
version = "0.1.0"
edition = "2021"
authors = ["Nueck <nueck@outlook.com>"]
repository = "https://github.com/Nueck/brave/"

[dependencies]
jsonwebtoken.workspace = true
log.workspace = true
rand.workspace = true
ring.workspace = true
base64.workspace = true
serde.workspace = true
once_cell.workspace = true
blake3.workspace = true
lettre.workspace = true
regex.workspace = true
