[package]
name = "brave-web"
version = "0.1.0"
edition = "2021"
authors = ["Nueck <nueck@outlook.com>"]
repository = "https://github.com/Nueck/cako-rust/"

#发布禁止
publish = false


[dependencies]
brave-utils = { path = "../brave-utils" }
brave-middleware = { path = "../brave-middleware" }
actix-web = "4.2.1"
actix-files = "0.6.2"
actix-rt = "2.8.0"
actix-cors = "0.6.4"
futures = "0.3.26"
futures-util = "0.3.26"
log = "0.4.17"
may = "0.3.41"
fast_log = "1.5.53"
sea-orm = { version = "0.11.0", features = ["sqlx-postgres", "runtime-actix-rustls", "macros"] }
config = "0.13.3"
dotenvy = "0.15.6"
once_cell = "1.17.1"
serde = { version = "1.0.137", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.93"
jsonwebtoken = "8.2.0"
rustls = "0.20.8"


